--- a/Abort.mw
+++ b/Abort.mw
@@ -72,3 +72,4 @@
 [[yi:אבארטאציע]]
 [[zh:堕胎]]
 [[zh-yue:落仔]]
+abort kelimesinin türkçe karşılığı düşükdür. ekseriyetle ilk 3 ay düşükleri kromozomal defektler nedeniyle olar.
