--- a/Mongoliýa.mw
+++ b/Mongoliýa.mw
@@ -4,7 +4,7 @@
 | style="background:#ffffff;" align=center colspan=2 |
 {| border=0 cellpadding=2 cellspacing=0
 | align=center width=148 | [[Image:Flag of Mongolia.svg|125px|Mongoliýa baýdagy]]
-| align=center width=148 | [[Image:Coat of arms of Mongolia.jpg|125px|Mongoliýa gerbi]]
+| align=center width=148 | [[Image:Coat of Arms of Mongolia.svg|125px|Mongoliýa gerbi]]
 |-
 | align=center width=148 | [[Mongoliýa baýdagy]]
 | align=center width=148 | [[Mongoliýa gerbi]]
