--- a/Beyoncé_Knowles.mw
+++ b/Beyoncé_Knowles.mw
@@ -1,55 +1,18 @@
-{| width="100%" 
-|-  
-| width="50%" |
-* Destiny's Child
-* [[1998]]
-** [[Destiny's Child (Destiny's Child)|Destiny's Child]]
-* [[1999]]
-** [[The Writing's On The Wall]]
-* [[2001]]
-** [[The Platinum's on the Wall]]
-** [[Survivor (Destiny's Child)|Survivor]]
-** [[Love: Destiny]]
-** [[8 Days Of Christmas]]
-* [[2002]]
-** [[Single Remix Tracks]]
-** [[This Is The Remix]]
-* [[2003]]
-** [[Destiny's Child World Tour]]
-* [[2004]]
-** [[Destiny Fulfilled]]
-* [[2005]]
-** [[Destiny Fulfilled 2005 Tour Edition]]
-** [[Number 1's]]
-** [[Exclusive Bonus CD Sampler]]
-* [[2008]]
-** [[Mathew Knowles & Music World Present Vol.1: Love Destiny]]
-| width="50%" |
-* Solo
-*[[2003]].:
-** [[Dangerously in Love]] 
-*[[2004]].:
-** [[True Star: A Private Performance]]
-** [[The Star Spangled Banner - Super Bowl XXXVIII Performance]]
-** [[Live at Wembley]]
-** [[Pepsi Music 2004 Beyoncé Exclusive]]
-*[[2005]].:
-** [[Speak My Mind]]
-*[[2006]].:
-** [[Exclusive Bonus CD Sampler]]
-** [[B'Day]]
-**[[Beyoncé The Ultimate Performer]]
-*[[2007]].:
-** [[B'Day|B'Day Deluxe Edition]]
-** [[B'Day Anthology Video Album]]
-** [[Green Light: Freemasons EP]]
-** [[Irreemplazable]]
-** [[The Beyoncé Experience Live]]
-*[[2008]].:
-** [[Beyoncé Karaoke Hits Vol. I]]
-** [[Love Letters]]
-** [[I Am... Sasha Fierce]]
-|}
+[[File:Beyonce Barcelona 2009.jpg|200px|right]]
+=== 2002/2004 ===
+* 2003 - ''[[Dangerously in Love]]'' <small>(„Work It Out”, „'03 Bonnie & Clyde”, „Crazy in Love”, „Baby Boy”, „Me, Myself and I”, „Naughty Girl”)</small>
+* 2004 - ''[[Live at Wembley]]''
+
+=== 2005/2007 === 
+* 2006 - ''[[B'Day]]'' / ''[[B'Day|B'Day Deluxe Edition]]'' <small>(„Check on It”, „Déjà Vu”, „Ring the Alarm”, „Upgrade U”, „Irreplaceable”, „Listen”, „Beautiful Liar”, „Get Me Bodied”)</small>
+* 2007 - ''[[B'Day Anthology Video Album]]''
+* 2007 - ''[[Irreemplazable]]'' <small>(„Irreemplazable”, „Get Me Bodied (Timbaland Remix)”)</small>
+* 2007 - ''[[The Beyoncé Experience Live]]''
+
+=== 2008/2009 ===
+* 2008 - ''[[I Am... Sasha Fierce]]'' / ''[[I Am... Sasha Fierce|I Am... Sasha Fierce Deluxe Edition]]'' <small>(„If I Were a Boy”, „Single Ladies (Put a Ring on It)”, „Halo”, „Diva”, „Ego”, „Sweet Dreams”)</small>
+* 2009 - ''[[Above and Beyoncé - Video Collection & Dance Mixes]]''
+* 2009 - ''[[I Am... Sasha Fierce|I Am... Sasha Fierce Platinum Edition]]''
 
 [[als:Beyoncé Knowles]]
 [[ar:بيونسيه نولز]]
