*Empty MediaWiki Message*

--- a/Beyoncé_Knowles.mw
+++ b/Beyoncé_Knowles.mw
@@ -1,7 +1,11 @@
+[[File:Beyonce.jpg|200px|right]]
 [[File:Beyonce Barcelona 2009.jpg|200px|right]]
 === 2002/2004 ===
 * 2003 - ''[[Dangerously in Love]]'' <small>(„Work It Out”, „'03 Bonnie & Clyde”, „Crazy in Love”, „Baby Boy”, „Me, Myself and I”, „Naughty Girl”)</small>
 * 2004 - ''[[Live at Wembley]]''
+
+* 2003/2004 - ''Dangerously in Love World Tour''
+* 2004 - ''Verizon Ladies First Tour'' <small>(with Alicia Keys & Missy Elliott)</small>
 
 === 2005/2007 === 
 * 2006 - ''[[B'Day]]'' / ''[[B'Day|B'Day Deluxe Edition]]'' <small>(„Check on It”, „Déjà Vu”, „Ring the Alarm”, „Upgrade U”, „Irreplaceable”, „Listen”, „Beautiful Liar”, „Get Me Bodied”)</small>
@@ -9,10 +13,14 @@
 * 2007 - ''[[Irreemplazable]]'' <small>(„Irreemplazable”, „Get Me Bodied (Timbaland Remix)”)</small>
 * 2007 - ''[[The Beyoncé Experience Live]]''
 
+* 2007 - ''The Beyoncé Experience''
+
 === 2008/2009 ===
 * 2008 - ''[[I Am... Sasha Fierce]]'' / ''[[I Am... Sasha Fierce|I Am... Sasha Fierce Deluxe Edition]]'' <small>(„If I Were a Boy”, „Single Ladies (Put a Ring on It)”, „Halo”, „Diva”, „Ego”, „Sweet Dreams”)</small>
 * 2009 - ''[[Above and Beyoncé - Video Collection & Dance Mixes]]''
 * 2009 - ''[[I Am... Sasha Fierce|I Am... Sasha Fierce Platinum Edition]]''
+
+* 2009 - ''I Am... Tour''
 
 [[als:Beyoncé Knowles]]
 [[ar:بيونسيه نولز]]
