*Empty MediaWiki Message*

--- a/Kaýserispor.mw
+++ b/Kaýserispor.mw
@@ -1,8 +1,10 @@
 '''Kayserispor Sport Topary''' hazirki wagtda [[Türkiýe Futbol Ligasy]]'nda basleşige dowam edyar.
+
 {{Türkiýe Futbol Ligasy}}
 [[Category:Türkiýede Futbol]]
 [[Category:Türkiýede Sport]]
 
+[[az:Kayserispor (Kayseri)]]
 [[ar:كايسري سبور]]
 [[ca:Kayserispor Kulübü]]
 [[de:Kayserispor]]
