*Empty MediaWiki Message*

--- a/Gruziýa.mw
+++ b/Gruziýa.mw
@@ -1,1 +1,149 @@
-#REDIRECT [[Gürjüstan]]
+'''Gruziýa Respublikasy''' (gruzinçe:საქართველო/Sakartvelo) [[Ýewropa]]'da bir ýurt.
+
+[[Category:Aziýa]]
+[[Category:Ýewropa]]
+
+<!-- interwiki -->
+
+[[ab:Қырҭтәыла Аҳәынҭқарра]]
+[[af:Georgië]]
+[[als:Georgien]]
+[[an:Cheorchia]]
+[[ar:جورجيا]]
+[[arc:ܓܘܪܓܝܐ (ܐܬܪܐ)]]
+[[arz:جورجيا]]
+[[ast:Xorxa]]
+[[av:Гуржи]]
+[[az:Gürcüstan]]
+[[bat-smg:Grozėjė]]
+[[be:Грузія]]
+[[be-x-old:Грузія]]
+[[bg:Грузия]]
+[[bn:জর্জিয়া (রাষ্ট্র)]]
+[[br:Jorjia (bro)]]
+[[bs:Gruzija]]
+[[ca:Geòrgia]]
+[[ceb:Georgia (nasod)]]
+[[crh:Gürcistan]]
+[[cs:Gruzie]]
+[[csb:Grëzóńskô]]
+[[cu:Гєѡргі́ꙗ]]
+[[cv:Грузи]]
+[[cy:Georgia]]
+[[da:Georgien]]
+[[de:Georgien]]
+[[diq:Gurcıstan]]
+[[dsb:Georgiska]]
+[[ee:Georgia]]
+[[el:Γεωργία]]
+[[en:Georgia (country)]]
+[[eo:Kartvelio]]
+[[es:Georgia]]
+[[et:Gruusia]]
+[[eu:Georgia]]
+[[fa:گرجستان]]
+[[fi:Georgia]]
+[[fiu-vro:Gruusia]]
+[[fo:Georgia]]
+[[fr:Géorgie (pays)]]
+[[frp:Jôrg·ie (payis)]]
+[[fy:Geörgje]]
+[[ga:An tSeoirsia]]
+[[gd:Gruisia]]
+[[gl:Xeorxia - საქართველო]]
+[[gv:Yn Çhorshey]]
+[[haw:Keokia]]
+[[he:גאורגיה]]
+[[hi:जोर्जिया]]
+[[hif:Georgia]]
+[[hr:Gruzija]]
+[[hsb:Georgiska]]
+[[ht:Jeoji]]
+[[hu:Grúzia]]
+[[hy:Վրաստան]]
+[[ia:Georgia (pais)]]
+[[id:Georgia]]
+[[ie:Georgia]]
+[[ilo:Georgia (pagilian)]]
+[[io:Georgia (stato)]]
+[[is:Georgía]]
+[[it:Georgia]]
+[[ja:グルジア]]
+[[jv:Georgia]]
+[[ka:საქართველო]]
+[[kk:Гүржістан]]
+[[ko:그루지야]]
+[[ksh:Gejorgije]]
+[[ku:Gurcistan]]
+[[kv:Грузия]]
+[[kw:Pow Grouzi]]
+[[ky:Грузия]]
+[[la:Georgia]]
+[[lb:Georgien]]
+[[li:Georgië]]
+[[lij:Geòrgia (stato)]]
+[[lmo:Georgia]]
+[[lt:Gruzija]]
+[[lv:Gruzija]]
+[[mk:Грузија]]
+[[ml:ജോര്‍ജ്ജിയ]]
+[[mn:Гүрж]]
+[[mr:जॉर्जिया (देश)]]
+[[ms:Georgia (negara)]]
+[[mzn:گورجئون]]
+[[na:Georgia]]
+[[nah:Xeorxitlān]]
+[[nds:Georgien]]
+[[new:ज्योर्जिया]]
+[[nl:Georgië]]
+[[nn:Georgia]]
+[[no:Georgia]]
+[[nov:Georgia]]
+[[oc:Georgia (Caucàs)]]
+[[os:Гуырдзыстон]]
+[[pam:Georgia (country)]]
+[[pih:Jorja]]
+[[pl:Gruzja]]
+[[pms:Geòrgia]]
+[[pnt:Γρουζία]]
+[[ps:جيورجيا]]
+[[pt:Geórgia]]
+[[qu:Kartulsuyu]]
+[[ro:Georgia]]
+[[ru:Грузия]]
+[[sah:Грузия]]
+[[scn:Giorgia]]
+[[sco:Georgie (kintra)]]
+[[se:Georgia]]
+[[sh:Gruzija]]
+[[simple:Georgia (country)]]
+[[sk:Gruzínsko]]
+[[sl:Gruzija]]
+[[sq:Gjeorgjia]]
+[[sr:Грузија]]
+[[sv:Georgien]]
+[[sw:Georgia (nchi)]]
+[[szl:Gruzyjo]]
+[[ta:சியார்சியா (நாடு)]]
+[[te:జార్జియా (దేశం)]]
+[[tg:Гурҷистон]]
+[[th:ประเทศจอร์เจีย]]
+[[tl:Georgia]]
+[[tr:Gürcistan]]
+[[udm:Грузия]]
+[[ug:گرۇزىيە]]
+[[uk:Грузія]]
+[[ur:جارجیا]]
+[[uz:Gurjiston]]
+[[vi:Gruzia]]
+[[vo:Grusiyän]]
+[[war:Georgia (nasod)]]
+[[wo:Jeoorji]]
+[[wuu:格鲁吉亚]]
+[[xal:Гүрҗмүдн Орн Нутг]]
+[[yi:גרוזיע]]
+[[yo:Georgia]]
+[[zea:Georhië]]
+[[zh:格鲁吉亚]]
+[[zh-min-nan:Sakartvelo]]
+[[zh-yue:格魯吉亞]]
