Bot değişikliği Değiştiriliyor: [[nah:Teutontlān]]

--- a/Germaniýa.mw
+++ b/Germaniýa.mw
@@ -132,7 +132,7 @@ umumy meýdany 357,021 km². 82 million halkly ýurt Ýewropa Birlesiginde ilat 
 [[mt:Ġermanja]]
 [[myv:Германия Мастор]]
 [[na:Germany]]
-[[nah:Alemania - Teutontlān]]
+[[nah:Teutontlān]]
 [[nap:Germania]]
 [[nds:Düütschland]]
 [[nds-nl:Duutslaand]]
