--- a/Türkmenistan.mw
+++ b/Türkmenistan.mw
@@ -186,6 +186,7 @@ Häzirki wagtda Türkmenistanda 16 sany ýokary okuw jaylary bar we olarda 250 d
 *[[Türkmenbaşy]] 
 *[[Gumdag]]
 *[[Hazar]] ([[Çeleken]])
+*[[Sarahs]]
 
 === [[Welaýat|Welaýatlar]] ===
 
