*Empty MediaWiki Message*

--- a/Filippinler.mw
+++ b/Filippinler.mw
@@ -45,7 +45,7 @@
 |}
 '''Filippinler''', [[Aziýa]]da ýerleşýän [[döwlet|döwletleriň]] biri.
 
-Goňşy [[döwlet]]ler: [[Hytaý]], [[Taýwan]], [[Wýetnam]] we [[Malaýziýa]].
+Goňşy [[döwlet]]ler: [[Hytaý]], [[Taýwan]], [[Wýetnam]] we [[Malaý]].
 
 [[Category:Aziýa]]
 
@@ -185,7 +185,7 @@ Goňşy [[döwlet]]ler: [[Hytaý]], [[Taýwan]], [[Wýetnam]] we [[Malaýziýa]]
 [[vi:Philippines]]
 [[vo:Filipuäns]]
 [[wa:Filipenes]]
-[[war:Pilipinas]]
+[[Category:Pilipinas, borneo islands]]
 [[wo:Filipiin]]
 [[wuu:菲律宾]]
 [[yi:פיליפינען]]
