Reverted edits by [[Special:Contributions/69.116.146.211|69.116.146.211]] ([[User talk:69.116.146.211|Talk]]) to last revision by [[User:TXiKiBoT|TXiKiBoT]]

--- a/Filippinler.mw
+++ b/Filippinler.mw
@@ -45,7 +45,7 @@
 |}
 '''Filippinler''', [[Aziýa]]da ýerleşýän [[döwlet|döwletleriň]] biri.
 
-Goňşy [[döwlet]]ler: [[Hytaý]], [[Taýwan]], [[Wýetnam]] we [[Malaý]].
+Goňşy [[döwlet]]ler: [[Hytaý]], [[Taýwan]], [[Wýetnam]] we [[Malaýziýa]].
 
 [[Category:Aziýa]]
 
@@ -185,7 +185,7 @@ Goňşy [[döwlet]]ler: [[Hytaý]], [[Taýwan]], [[Wýetnam]] we [[Malaý]].
 [[vi:Philippines]]
 [[vo:Filipuäns]]
 [[wa:Filipenes]]
-[[Category:Pilipinas, borneo islands]]
+[[war:Pilipinas]]
 [[wo:Filipiin]]
 [[wuu:菲律宾]]
 [[yi:פיליפינען]]
