*Empty MediaWiki Message*

--- a/Ruhnama.mw
+++ b/Ruhnama.mw
@@ -4,7 +4,7 @@ Awtory:Beyik Saparmyrat Turkmenbasy
 http://www.ruhnama.info
 http://www.ruhnamaonline.com
 * {{zh icon}}[http://en.wikipedia.org/wiki/User:Ruhnama Chinese translation]
-
+bir diktator tarapynadan yazylan kitap
 [[ar:روح نامة]]
 [[br:Ruhnama]]
 [[de:Ruhnama]]
