--- a/Alman_dili.mw
+++ b/Alman_dili.mw
@@ -1,5 +1,5 @@
 [[File:Map German SpeakingWorld.png|right|470px|]]
-'''Nemesçe''' (Deutsch) : [[Germaniýa]], [[Awstriýa]], [[Lihtenşteýn]], [[Lýuksemburg]] we [[Şweýsariýa]]'nyň resmi [[dil]]i.
+'''Nemesçe''' (Deutsch) : [[Germaniýa]], [[Awstriýa]], [[Lihtenşteýn]], [[Lýuksemburg]], [[Belgiýa]] we [[Şweýsariýa]]'nyň resmi [[dil]]i.
 
 == Nemesçe Elipbiý ==
 : a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z, ä, ö, ü, ß
