--- a/Döwletmämmet_Azady_adyndaky_Türkmen_milli_dünýä_dilleri_instituty.mw
+++ b/Döwletmämmet_Azady_adyndaky_Türkmen_milli_dünýä_dilleri_instituty.mw
@@ -40,4 +40,6 @@
 
 ==Salgysy==
 [[Aşgabat]] şäheri, 2060-njy köçe, 47. Tel: 34-56-71, 34-54-66, faks: 34-39-88
-[[Category:Türkmenistandaky Uniwersitedler]]
+
+[[Kategoriýa:Türkmenistandaky uniwersitetler]]
+[[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]
