*Empty MediaWiki Message*

--- a/Halkara_türkmen-türk_uniwersiteti.mw
+++ b/Halkara_türkmen-türk_uniwersiteti.mw
@@ -30,4 +30,5 @@ Türkmenistanda söwdanyň we maýa goýumlarynyň ösüşi.
 == Salgylar ==
 * [http://www.ittu.edu.tm/ Resmi web sahypasy] 
 
-[[Category:Türkmenistandaky Uniwersitedler]]
+[[Kategoriýa:Türkmenistandaky uniwersitetler]]
+[[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]
