--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -13,7 +13,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 
 '''Aşgabatda yerleşyan uniwersitetler'''
 * [[Halkara türkmen-türk uniwersiteti]]
-* [[Magtymguly adyndaky türkmen döwlet uniwersiteti]] 
+* [[Magtymguly adyndaky Türkmen döwlet uniwersiteti]] 
 * [[Sport we Turizm Institudy]]
 * [[Turkmen Milli Harby Institudy]]
 * [[Oba-Hojalyk Institudy (Selhoz)]]
