--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -14,7 +14,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 '''Aşgabatda yerleşyan uniwersitetler'''
 * [[Halkara türkmen-türk uniwersiteti]]
 * [[Magtymguly adyndaky Türkmen döwlet uniwersiteti]] 
-* [[Sport we Turizm Institudy]]
+* [[Türkmenistanyň milli sport we syýahatçylyk instituty]]
 * [[Turkmen Milli Harby Institudy]]
 * [[Oba-Hojalyk Institudy (Selhoz)]]
 * [[Lukmançylyk Instituty]]
