--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -16,7 +16,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[Magtymguly adyndaky Türkmen döwlet uniwersiteti]] 
 * [[Türkmenistanyň milli sport we syýahatçylyk instituty]]
 * [[Turkmen Milli Harby Institudy]]
-* [[Oba-Hojalyk Institudy (Selhoz)]]
+* [[S.A.Nyýazow adyndaky Türkmen oba hojalyk uniwersiteti]]
 * [[Lukmançylyk Instituty]]
 * [[Polisiýa akademiýasy]] 
 * [[Halk-Hojalyk Institudy (Narhoz)]] 
