--- a/S.A.Nyýazow_adyndaky_Türkmen_oba_hojalyk_uniwersiteti.mw
+++ b/S.A.Nyýazow_adyndaky_Türkmen_oba_hojalyk_uniwersiteti.mw
@@ -1,2 +1,3 @@
-[[Category:Türkmenistandaky Ýokary Okuw Jaýlary]]
+[[Category:Türkmenistandaky uniwersitetler]]
+[[Category:Türkmenistandaky ýokary okuw mekdepleri]]
 [[Category:Bilim]]
