--- a/S.A.Nyýazow_adyndaky_Türkmen_oba_hojalyk_uniwersiteti.mw
+++ b/S.A.Nyýazow_adyndaky_Türkmen_oba_hojalyk_uniwersiteti.mw
@@ -1,3 +1,3 @@
-[[Category:Türkmenistandaky uniwersitetler]]
-[[Category:Türkmenistandaky ýokary okuw mekdepleri]]
-[[Category:Bilim]]
+[[Kategoriýa:Türkmenistandaky uniwersitetler]]
+[[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]
+[[Kategoriýa:Bilim]]
