--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -15,7 +15,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[Halkara türkmen-türk uniwersiteti]]
 * [[Magtymguly adyndaky Türkmen döwlet uniwersiteti]] 
 * [[Türkmenistanyň milli sport we syýahatçylyk instituty]]
-* [[Turkmen Milli Harby Institudy]]
+* [[Türkmenistanyň Harby instituty]]
 * [[S.A.Nyýazow adyndaky Türkmen oba hojalyk uniwersiteti]]
 * [[Lukmançylyk Instituty]]
 * [[Polisiýa akademiýasy]] 
