*Empty MediaWiki Message*

--- a/Türkmenistanyň_Harby_instituty.mw
+++ b/Türkmenistanyň_Harby_instituty.mw
@@ -1,2 +1,2 @@
-[[Category:Türkmenistandaky Ýokary Okuw Jaýlary]]
-[[Category:Bilim]]
+[[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]
+[[Kategoriýa:Bilim]]
