--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -17,7 +17,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[Türkmenistanyň milli sport we syýahatçylyk instituty]]
 * [[Türkmenistanyň Harby instituty]]
 * [[S.A.Nyýazow adyndaky Türkmen oba hojalyk uniwersiteti]]
-* [[Lukmançylyk Instituty]]
+* [[Türkmen döwlet lukmançylyk instituty]]
 * [[Polisiýa akademiýasy]] 
 * [[Halk-Hojalyk Institudy (Narhoz)]] 
 * [[Politehniki Institudy]] 
