--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -19,7 +19,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[S.A.Nyýazow adyndaky Türkmen oba hojalyk uniwersiteti]]
 * [[Türkmen döwlet lukmançylyk instituty]]
 * [[Polisiýa akademiýasy]] 
-* [[Halk-Hojalyk Institudy (Narhoz)]] 
+* [[Türkmen döwlet ykdysadyýet we dolandyryş instituty]] 
 * [[Politehniki Institudy]] 
 * [[Döwletmämmet Azady adyndaky Türkmen milli dünyä dilleri instituty]]
 * [[Ulag we Aragatnaşyk institudy]]
