--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -23,7 +23,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[Politehniki Institudy]] 
 * [[Döwletmämmet Azady adyndaky Türkmen milli dünyä dilleri instituty]]
 * [[Ulag we Aragatnaşyk institudy]]
-* [[Konserwatoriýa]]
+* [[Türkmen milli konserwatoriýasy]]
 
 == Dogan şäherleri ==
 * [[File:Flag of the United States.svg|30px|ABŞ Bayrağı]] [[Albuquerque, New Mexico]], [[ABŞ]]
