Links are removed since it is a particular higher education institute

--- a/Türkmen_milli_konserwatoriýasy.mw
+++ b/Türkmen_milli_konserwatoriýasy.mw
@@ -1,31 +1,2 @@
-[[Category:Türkmenistandaky Ýokary Okuw Jaýlary]]
-
-[[bg:Консерватория]]
-[[bs:Konzervatorijum]]
-[[ca:Conservatori de música]]
-[[cs:Konzervatoř]]
-[[da:Musikkonservatorium]]
-[[de:Konservatorium]]
-[[en:College or university school of music]]
-[[eo:Konservatorio]]
-[[es:Conservatorio]]
-[[et:Konservatoorium]]
-[[fa:کنسرواتوار]]
-[[fi:Konservatorio]]
-[[fr:École supérieure de musique]]
-[[gl:Conservatorio]]
-[[he:אקדמיה למוזיקה]]
-[[hr:Konzervatorij]]
-[[it:Conservatorio]]
-[[ja:音楽学部]]
-[[ka:კონსერვატორია]]
-[[nl:Conservatorium]]
-[[no:Konservatorium]]
-[[pl:Konserwatorium]]
-[[pt:Conservatório de música]]
-[[ru:Консерватория]]
-[[simple:College or university school of music]]
-[[sk:Konzervatórium]]
-[[sv:Musikhögskola]]
-[[uk:Консерваторія]]
-[[zh:音樂學系]]
+[[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]
+[[Kategoriýa:Bilim]]
