--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -18,7 +18,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[Türkmenistanyň Harby instituty]]
 * [[S.A.Nyýazow adyndaky Türkmen oba hojalyk uniwersiteti]]
 * [[Türkmen döwlet lukmançylyk instituty]]
-* [[Polisiýa akademiýasy]] 
+* [[Türkmenistanyň polisiýa akademiýasy]] 
 * [[Türkmen döwlet ykdysadyýet we dolandyryş instituty]] 
 * [[Politehniki Institudy]] 
 * [[Döwletmämmet Azady adyndaky Türkmen milli dünyä dilleri instituty]]
