--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -11,7 +11,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 == Bilim ==
 [[File:Ministry of oil and gas of Turkmenistan 2.jpg|thumb|right|150px| Nebit we Gaz ministrligi. [[Berzeňňi]]. Aşgabat.]]
 
-'''Aşgabatda yerleşyan uniwersitetler'''
+'''Aşgabatda ýerleşýän käbir ýokary okuw mekdepleri'''
 * [[Halkara türkmen-türk uniwersiteti]]
 * [[Magtymguly adyndaky Türkmen döwlet uniwersiteti]] 
 * [[Türkmenistanyň milli sport we syýahatçylyk instituty]]
