--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -20,7 +20,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[Türkmen döwlet lukmançylyk instituty]]
 * [[Türkmenistanyň polisiýa akademiýasy]] 
 * [[Türkmen döwlet ykdysadyýet we dolandyryş instituty]] 
-* [[Politehniki Institudy]] 
+* [[Türkmen politehniki instituty]] 
 * [[Döwletmämmet Azady adyndaky Türkmen milli dünyä dilleri instituty]]
 * [[Ulag we Aragatnaşyk institudy]]
 * [[Türkmen milli konserwatoriýasy]]
