/* Sport - Durmuş - Bilim */

--- a/Balkanabat.mw
+++ b/Balkanabat.mw
@@ -9,16 +9,15 @@ Balkanabadyn taryhy ilkinji gezek [[1933]] yylyna baryar. Şol wagt, Balkanabat 
 Balkanabat hazirki döwürde [[nebit]] we [[tebigy gaz]] öndürmede senagat merkezidir.
 
 == Sport - Durmuş - Bilim ==
-'''Şaherdaki Sport Topary:'''
+'''Şäherdäki sport topary:'''
 * [[Nebitçi FT]] 
-'''Şaherdaki Bilim Ojaklary:'''
+'''Şäherdäki bilim ojaklary:'''
 
-1 sany Yokary okuw jayy:
-* [[Politehniki Institudy]] (''[[Aşgabat]]da hem bölümleri bar'')
+1 sany ýokary okuw mekdebi:
+* [[Türkmen politehniki instituty]] (''[[Aşgabat]]da hem bölümleri bar'')
 20 sany orta mekdep: (olardan 1i türk, 1i gazak, 2si rus garyşyk we galany doly türkmen)
 * [[Balkanabat türkmen-türk mekdebi]]
 * ...
-
 
 == Belli Yerler ==
 * [[Balkanabat stadiony]]
