--- a/Türkmen_politehniki_instituty.mw
+++ b/Türkmen_politehniki_instituty.mw
@@ -1,3 +1,3 @@
-[[Category:Türkmenistandaky Ýokary Okuw Jaýlary]]
+[[Category:Türkmenistandaky ýokary okuw mekdepleri]]
 [[Category:Bilim]]
 [[Category:Balkanabat]]
