--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -22,7 +22,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[Türkmen döwlet ykdysadyýet we dolandyryş instituty]] 
 * [[Türkmen politehniki instituty]] 
 * [[Döwletmämmet Azady adyndaky Türkmen milli dünyä dilleri instituty]]
-* [[Ulag we Aragatnaşyk institudy]]
+* [[Türkmen döwlet ulag we aragatnaşyk instituty]]
 * [[Türkmen milli konserwatoriýasy]]
 
 == Dogan şäherleri ==
