--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -21,7 +21,7 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [[Türkmenistanyň polisiýa akademiýasy]] 
 * [[Türkmen döwlet ykdysadyýet we dolandyryş instituty]] 
 * [[Türkmen politehniki instituty]] 
-* [[Döwletmämmet Azady adyndaky Türkmen milli dünyä dilleri instituty]]
+* [[Döwletmämmet Azady adyndaky Türkmen milli dünýä dilleri instituty]]
 * [[Türkmen döwlet ulag we aragatnaşyk instituty]]
 * [[Türkmen milli konserwatoriýasy]]
 
