*Empty MediaWiki Message*

--- a/Döwletmämmet_Azady_adyndaky_Türkmen_milli_dünýä_dilleri_instituty.mw
+++ b/Döwletmämmet_Azady_adyndaky_Türkmen_milli_dünýä_dilleri_instituty.mw
@@ -1,4 +1,4 @@
-'''Döwletmämmet Azady adyndaky Türkmen milli dünyä dilleri instituty''', [[Türkmenistan]]da bir uniwersited.
+'''Döwletmämmet Azady adyndaky Türkmen milli dünyä dilleri instituty''', [[Türkmenistan]]da bir institut.
 
 == Institutyň durmuşy ==
 
@@ -41,5 +41,4 @@
 ==Salgysy==
 [[Aşgabat]] şäheri, 2060-njy köçe, 47. Tel: 34-56-71, 34-54-66, faks: 34-39-88
 
-[[Kategoriýa:Türkmenistandaky uniwersitetler]]
 [[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]
