/* Ýokary okuw jaýlary barada */

--- a/Türkmenistan.mw
+++ b/Türkmenistan.mw
@@ -156,8 +156,8 @@ Türkmenistan bäş welaýat we aýratyn paýtagt şäherden ybaratdyr.
 | TM-M || [[Mary]] ||87,000  || 1,146,800 || 5
 |}
 
-== Ýokary okuw jaýlary barada ==
-Häzirki wagtda Türkmenistanda 16 sany ýokary okuw jaylary bar we olarda 250 dürli kärler boýunça ýokary hünärli spesialistler taýýarlanylýar. Türkmenistanyň döwlet çeperçilik Akademiýasy, Halkara türkmen-türk uniwersiteti. Ýokary tehniki kolleji, Polisiýa akademiýasy täze ýokary okuw jaylarynyň hataryna girýär.
+== Ýokary okuw mekdepleri barada ==
+Häzirki wagtda Türkmenistanda 16 sany ýokary okuw jaylary bar we olarda 250 dürli kärler boýunça ýokary hünärli spesialistler taýýarlanylýar. [[Türkmenistanyň döwlet çeperçilik akademiýasy]]sy, [[Halkara türkmen-türk uniwersiteti]]ti. Ýokary tehniki kolleji, [[Türkmenistanyň polisiýa akademiýasy]] täze ýokary okuw mekdepleriniň hataryna girýär.
 
 Ýurdumyzda Galkynyş hereketiniň, teatrlardyr çeper höwesjeňler köpçüliginiň durmuş medeni roly artýar. Biziň maksadymyz Türkmenistanyň ykdysadyýetini düýpli özgertmekdir, ol özgerişlikler bolsa halkyň hal-ýagdaýyny uzul-kesil ýokarlandyrmaga mümkinçilik berer.
 
