*Empty MediaWiki Message*

--- a/Türkmenistanyň_Döwlet_lukmançylyk_uniwersiteti.mw
+++ b/Türkmenistanyň_Döwlet_lukmançylyk_uniwersiteti.mw
@@ -1,2 +1,8 @@
+* Bejeriş işi
+* Pediatriýa
+* Saglygy goraýyş-öňüni alyş işi
+* Stomatologiýa
+* Farmasiýa
+
 [[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]   
 [[Kategoriýa:Bilim]]
