*Empty MediaWiki Message*

--- a/Seýitnazar_Seýdi_adyndaky_Türkmen_döwlet_mugallymçylyk_instituty.mw
+++ b/Seýitnazar_Seýdi_adyndaky_Türkmen_döwlet_mugallymçylyk_instituty.mw
@@ -1,1 +1,20 @@
+* Fizika we matematika
+** Fizika
+** Matematika
+
+* Tebigy bilimler
+** Himiýa
+** Biologiýa
+** Geografiýa
+
+* Ynsanperwerlik-durmuş bilimleri
+** Taryh
+** Başlangyç bilimiň mugallymçylygy
+** Psihologiýa 
+
+* Dil we edebiýat
+** Türkmen dili we edebiýaty
+** Rus dili we edebiýaty
+** Iňlis dili we edebiýaty
+
 [[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]
