*Empty MediaWiki Message*

--- a/Türkmen_döwlet_medeniýet_instituty.mw
+++ b/Türkmen_döwlet_medeniýet_instituty.mw
@@ -1,1 +1,27 @@
+* Aktýorçylyk sungaty we režissura 
+** Drama we kino aktýory
+** Grim
+** Estrada we sirk oýunlarynyň aktýory
+** Teleradiogepleşikleri guramak we alyp barmak
+** Telekinooperatorçylyk
+** Drama režissurasy
+** Telewideniýe režissurasy
+** Kino režissurasy
+** Ses režissurasy
+** Yşyk bilen bezemek
+** Gurjak teatrynyň aktýory
+
+* Medeni-dynç alyş çärelerini guramak we ýola goýmak 
+** Medeni-dynç alyş çärelerini guramak we ýola goýmak 
+** Folklor toparyny guramak we dolandyrmak
+** Milli tans toparyny guramak we dolandyrmak
+** Höwesjeň aýdym-saz toparyny guramak we dolandyrmak
+** Taryhy ýadygärlikleri rejelemek
+** Taryhy-etnografiki gymmatlyklary rejelemek
+
+* Kitaphanaçylyk we muzeýşynaslyk
+** Kitaphana işini guramak
+** Muzeý işini guramak
+** Iş kagyzlarynyň dolanyşygyny guramak we arhiw işi
+
 [[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]
