*Empty MediaWiki Message*

--- a/Türkmenistanyň_döwlet_çeperçilik_akademiýasy.mw
+++ b/Türkmenistanyň_döwlet_çeperçilik_akademiýasy.mw
@@ -1,1 +1,31 @@
+* Nakgaşçylyk
+** Stanok nakgaşçylygy
+** Teatr-haşam nakgaşçylygy
+** Türkmenleriň miniatýura nakgaşçylygy
+** Filmiň şekillendiriş çözgüdi
+** Monumental nakgaşçylygy
+
+* Grafika
+** Stanok garfigi
+** Kitap grafigi
+** Plakat
+
+* Milli sungat
+** Halyçylyk sungaty
+** Keramika sungaty
+** Zergärçilik sungaty
+
+* Heýkeltaraşlyk
+** Heýkeltaraşlyk
+
+* Binagärlik
+** Binagärlik guraşgynyň bezegi
+** Binagärlik ýadygärlikleriniň rejelenilişi
+
+* Dizaýn
+** Dizaýn
+
+* Sungaty öwreniş
+** Şekillendiriş sungatynyň taryhy we nazaryýeti
+
 [[Kategoriýa:Türkmenistandaky ýokary okuw mekdepleri]]
