*Empty MediaWiki Message*

--- a/Belarusiýanyň_döwlet_informatika_we_radioelektronika_uniwersiteti_(BDIRU).mw
+++ b/Belarusiýanyň_döwlet_informatika_we_radioelektronika_uniwersiteti_(BDIRU).mw
@@ -34,49 +34,49 @@
  |colspan="2"|'''Belarusiýan döwlet informatika we radioelektronika uniwersiteti'''
  |-
  |-
- |colspan="2"|
+ |colspan="2"|[[Faýl:Корпус №1 P1010036.jpg|border|300px|BDIRU-nyň birinji okuw jaýy]]
  |-
  |-
  |colspan="2"|'''BDIRU-nyň birinji okuw jaýy'''
  |-
  |-
- |colspan="2"|
+ |colspan="2"|[[Faýl:Корпус №2.jpg|border|300px|BDIRU-nyň ikinji okuw jaýy]]
  |-
  |-
  |colspan="2"|'''BDIRU-nyň ikinji okuw jaýy'''
  |-
  |-
- |colspan="2"|
+ |colspan="2"|[[Faýl:Корпус №3.jpg|border|300px|BDIRU-nyň üçünji okuw jaýy]]
  |-
  |-
  |colspan="2"|'''BDIRU-nyň üçünji okuw jaýy'''
  |-
  |-
- |colspan="2"|
+ |colspan="2"|[[Faýl:Корпус №4.jpg|border|300px|BDIRU-nyň dördünji okuw jaýy]]
  |-
  |-
  |colspan="2"|'''BDIRU-nyň dördünji okuw jaýy'''
  |-
  |-
- |colspan="2"|
+ |colspan="2"|[[Faýl:Корпус №5.jpg|border|300px|BDIRU-nyň bäşinji okuw jaýy]]
  |-
  |-
  |colspan="2"|'''BDIRU-nyň bäşinji okuw jaýy'''
  |-
  |-
- |colspan="2"|
+ |colspan="2"|[[Faýl:Корпус №7.jpg|border|300px|BDIRU-nyň ýedinji okuw jaýy]]
  |-
  |-
  |colspan="2"|'''BDIRU-nyň ýedinji okuw jaýy'''
  |-
  |-
- |colspan="2"|
+ |colspan="2"|[[Faýl:Корпус №1 P1010036.jpg|border|300px|BDIRU-nyň birinji okuw jaýy]]
  |-
  |-
  |colspan="2"|'''Керим переведи тут, я не знаю как общежитие будет по туркменски:('''
  |-
  |-
- |colspan="2"|
+ |colspan="2"|[[Faýl:Корпус №1 P1010036.jpg|border|300px|BDIRU-nyň birinji okuw jaýy]]
  |-
  |-
  |colspan="2"|'''Керим переведи тут, я не знаю как общежитие будет по туркменски:('''
