*Empty MediaWiki Message*

--- a/Belarusiýanyň_döwlet_informatika_we_radioelektronika_uniwersiteti_(BDIRU).mw
+++ b/Belarusiýanyň_döwlet_informatika_we_radioelektronika_uniwersiteti_(BDIRU).mw
@@ -70,16 +70,16 @@
  |colspan="2"|'''BDIRU-nyň ýedinji okuw jaýy'''
  |-
  |-
- |colspan="2"|[[Faýl:Корпус №1 P1010036.jpg|border|300px|BDIRU-nyň birinji okuw jaýy]]
+ |colspan="2"|[[Faýl:Общежитие1.jpg|border|300px|Birinji umumy ýaşaýyş jaýy]]
  |-
  |-
- |colspan="2"|'''Керим переведи тут, я не знаю как общежитие будет по туркменски:('''
+ |colspan="2"|'''BDIRU-nyň Birinji umumy ýaşaýyş jaýy'''
  |-
  |-
- |colspan="2"|[[Faýl:Корпус №1 P1010036.jpg|border|300px|BDIRU-nyň birinji okuw jaýy]]
+ |colspan="2"|[[Faýl:Общ2.jpg|border|300px|ikinji umumy ýaşaýyş jaýy]]
  |-
  |-
- |colspan="2"|'''Керим переведи тут, я не знаю как общежитие будет по туркменски:('''
+ |colspan="2"|'''BDIRU-nyň ikinji umumy ýaşaýyş jaýy'''
 
  |}
 
