--- a/Gökdepe.mw
+++ b/Gökdepe.mw
@@ -1,6 +1,7 @@
-Gokdepe [[Ahal_wela%C3%BDaty|ahal]] welayatynda bir oba. 
-Bashga temalara seret 
-*[[Gokdepe_ursy|Gokdepe ursy]]
+Gökdepe [[Ahal_welaýaty]]nda ýerleşýän bir oba. 
+
+*[[Gökdepe urşy]]
+
 [[Category:Ahal]]
 
 [[en:Geok-Tepe]]
