--- a/Ukraina.mw
+++ b/Ukraina.mw
@@ -1,5 +1,8 @@
 '''Ukraina''', [[Gündogar Ýewropa]]da ýerleşýän döwletdir. Onuň serhediniň gündogarynda [[Russiýa]], günortasynda [[Belorussiýa]], günbatarynda [[Polşa]], [[Slowakiýa]], [[Wengriýa]], demirgazyk-günbatarynda [[Rumyniýa]], [[Maldowa]] ([[Prednistowiýa]] hem degişli), demirgazyk tarapynda bolsa [[Gara deňiz]] bilen [[Azow deňzi]] ýerleşýär. [[Kiýew]], döwletiň hem paýtagty hem-de iň iri şäheri bolup durýar.
 
+==Link==
+*[[Belarus]]
+
 [[Kategoriýa:Ukraina]]
 
 [[ace:Ukraina]]
