<!--  {{Infobox Uniwersiteti  |name=Belarusiýaň Döwlet Informatika we Radioelektronika Uniwersiteti  |city=[[Belarus]], [[Minsk]] ... }}  -->

--- a/Belarusiýanyň_döwlet_informatika_we_radioelektronika_uniwersiteti_(BDIRU).mw
+++ b/Belarusiýanyň_döwlet_informatika_we_radioelektronika_uniwersiteti_(BDIRU).mw
@@ -1,4 +1,9 @@
-{{Infobox Uniwersiteti}}
+<!--
+{{Infobox Uniwersiteti
+|name=Belarusiýaň Döwlet Informatika we Radioelektronika Uniwersiteti
+|city=[[Belarus]], [[Minsk]]
+}}
+-->
 
 {|border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0.5em 0 1em 1em; background: #F0FFF0; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 88%;"
  |+ style="background:#EEEEFF" style="font-size:125%; font-weight:bold;"|'''Belarusiýan Döwlet informatika we radioelektronika uniwersiteti'''
