*Empty MediaWiki Message*

--- a/Täçmämmet_Jürdekow.mw
+++ b/Täçmämmet_Jürdekow.mw
@@ -3,7 +3,7 @@ Turkmenistanyn halk yazyjysy Tacmammet Jurdekow [[1940]]-njy yylyn 15-nji mayynd
 *[[Başlyk aga bagyşla (çeper eser)|Başlyk aga bagyşla]]
 *[[Tacmammet Jurdekow "Gaplan gerekmi?!"|"Gaplan gerekmi?!"]]
 *[[Täçmämmet Jürdekow "Ody özüňe bas..."|"Ody özüňe bas..."]]
-*[[Tacmammet Jurdekow "Daliden dogry habar"|"Daliden dogry habar"]]
+*[[Däliden dogry habar (çeper eser)|Däliden dogry habar]]
 *[[Tacmammet Jurdekow "Menin milisiyam meni talayar"|"Menin milisiyam meni talayar"]]
 *[[Tacmammet Jurdekow "Uly bashlyk"|"Uly bashlyk"]]
 *[[Tacmammet Jurdekow "Garashsyzlygyn galkyndyran gudraty"|"Garashsyzlygyn galkyndyran gudraty"]] </br>
