*Empty MediaWiki Message*

--- a/Täçmämmet_Jürdekow.mw
+++ b/Täçmämmet_Jürdekow.mw
@@ -1,8 +1,8 @@
 [[Image:Tacmammet_Jurdekow.jpg|300px|right|thumb|Tacmammet Jurdekow]]
 Turkmenistanyn halk yazyjysy Tacmammet Jurdekow [[1940]]-njy yylyn 15-nji mayynda [[Gökdepe]] etrabynyn Kelejar obasynda eneden bolyar. Onun cagalykdan ceper soze bolan uly howesi, ymtylshy ozunin onat netijelerini beryar. Turkmen edebiyatynyn satira boluminde ymykly orun alan yazyjy bu gun yurdumyzyn ahli yerinde teeneli sozlerin taysyz ussady hokmunde tanalyar. T.Jurdekowyn eserleri birnace dashary yurt dillerine hem terjime edildi. Onun birnace kitaplaryny ashakda agzap gecelin:
 *[[Başlyk aga bagyşla (çeper eser)|Başlyk aga bagyşla]]
-*[[Tacmammet Jurdekow "Gaplan gerekmi?!"|"Gaplan gerekmi?!"]]
-*[[Täçmämmet Jürdekow "Ody özüňe bas..."|"Ody özüňe bas..."]]
+*[[Gaplaň gerekmi?! (çeper eser)|Gaplaň gerekmi?!]]
+*[[Ody özüňe bas... (çeper eser)|Ody özüňe bas...]]
 *[[Däliden dogry habar (çeper eser)|Däliden dogry habar]]
 *[[Tacmammet Jurdekow "Menin milisiyam meni talayar"|"Menin milisiyam meni talayar"]]
 *[[Tacmammet Jurdekow "Uly bashlyk"|"Uly bashlyk"]]
