*Empty MediaWiki Message*

--- a/Täçmämmet_Jürdekow.mw
+++ b/Täçmämmet_Jürdekow.mw
@@ -9,7 +9,7 @@ Turkmenistanyn halk yazyjysy Tacmammet Jurdekow [[1940]]-njy yylyn 15-nji mayynd
 *[[Tacmammet Jurdekow "Garashsyzlygyn galkyndyran gudraty"|"Garashsyzlygyn galkyndyran gudraty"]] </br>
 we yenede birnace eserleri bar.</br></br></br>
 
-Tacmammet Jurdekowyn 1996-njy yylda cykan [[Tacmammet Jurdekow "Daliden dogry habar"|"Daliden dogry habar"]] diyen kitabynda, ozi barada sheyle "terjimehalyny" yazyar:</br>
+Tacmammet Jurdekowyn 1996-njy yylda cykan [[Däliden dogry habar (çeper eser)|Däliden dogry habar]] diyen kitabynda, ozi barada sheyle "terjimehalyny" yazyar:</br>
 
 Uly ile ayan bir hakykat bar yashamak ucin ilki dogulmaly. Hudaya shukur, menem hali-hazir yasap yorun. Diymek, hacanam bolsa bir wagt menem dogulypdyryn onun anyk senesi, yagny nacenji yyldygy ayy guni okyjy ucin hokmanmyka?! Eger sheyle bolsa, onda, otyrynda ozuniz hasaplap gorun menin dogulan yylym luw yyly eken. Satirik shahyr kemine panydan bahyyete "Gecenden" ylayyk yuz yyl son dunya inipdirin. Has takygy shu asyryn ahyrynda, yagny 2000-nji yylyn 15-nji mayynda, nesip edip yashap yorsek bizem 60 yashayarys. 
 
