*Empty MediaWiki Message*

--- a/Özbegistan.mw
+++ b/Özbegistan.mw
@@ -24,7 +24,7 @@
 | [[Özbek]]
 |-
 | '''[[Gimn]]'''
-| [[Özbegystan gimni|Özbegistanyň gimni]]
+| [[Özbegistan respublikasynyň döwlet gimni|Özbegistanyň gimni]]
 |-
 | '''[[Meýdany]]'''
 | 447.400 km²
