--- a/Dong_Hoi.mw
+++ b/Dong_Hoi.mw
@@ -13,8 +13,7 @@
 | align="center" style="background:#e3e3e3;" colspan="2" style="border-bottom:3px solid gray;" | 
 |}
 [[File:Quang Binh Quan.jpg|thumb|left|200px|Đồng Hới]]
-'''Đồng Hới''' (''Thành phố Đồng Hới'') [[Wýetnam]]'da bir oba. [[Đồng Hới airport]] is 6 km north of city central.
-
+'''Đồng Hới''' (''Thành phố Đồng Hới'') [[Wýetnam]]'da bir oba. 
 [[Category:Wýetnam]]
 
 [[af:Dong Hoi]]
