*Empty MediaWiki Message*

--- a/Türkmenistan.mw
+++ b/Türkmenistan.mw
@@ -16,13 +16,13 @@
 | [[Aşgabat]] şäheri
 |-
 | '''[[Prezidenti]]'''
-| [[Gurbanguly Mälikgulyýewiç Berdimuhammedow]]
+| [[Gurbanguly Mälikgulyýewiç Berdimuhamedow]]
 |-
 | '''[[Dili]]'''
 | [[Türkmen dili|Türkmen dili]]
 |-
 | '''[[Gimni]]'''
-| [[Türkmenistanyň döwlet gimni]]
+| [[Türkmenistan respublikasynyň döwlet gimni|Türkmenistanyň döwlet gimni]]
 |-
 | '''[[Meýdany]]'''
 | 488 100 km&sup2;
