*Empty MediaWiki Message*

--- a/Türkmenistan.mw
+++ b/Türkmenistan.mw
@@ -31,7 +31,7 @@
 | 5 110 023 (2006) <br/>&nbsp;9,4/km&sup2;
 |-
 | '''[[Garaşsyzlyk güni]]'''
-| [[1991]]-nji ýylyň [[27-nji Oktýabry ]]
+| [[27 oktýabr]], [[1991]] 
 |-
 | '''[[Pul]]'''
 | [[manat]]
