--- a/Başkent_Bilim_Merkezi.mw
+++ b/Başkent_Bilim_Merkezi.mw
@@ -1,3 +1,3 @@
-'''Bashkent Bilim Merkezi'''-[[Türkmenistan]]-da bilime degişli her hili işler alyp barýan [[Türkmenistan]]yň [[Bilim Ministirligi]]ne degişli gurama. [[Türkmen-Türk mekdepleri]]nden jogapkär.
+'''Bashkent Bilim Merkezi'''-[[Türkmenistan]]-da bilime degişli her hili işler alyp barýan [[Türkmenistan]]yň [[Bilim Ministirligi]]ne degişli gurama. [[Türkmen-türk mekdepleri]]nden jogapkär.
 [[Category:Bilim]]
 [[Category:Ylym]]
