*Empty MediaWiki Message*

--- a/Gazet.mw
+++ b/Gazet.mw
@@ -8,7 +8,7 @@ Gündelik yada Hepdelik habarlary çap edyan serişde.
 * [[Mugallymlar gazeti]]
 * [[Esger]]
 * [[Adalat]] 
-* [[Turkmeniň ýüpek ýoly]]
+* [[Türkmeniň ýüpek ýoly]]
 * [[Edebiyat we Sungat]]
 * [[Turkmen Sporty]]
 * [[Biznes Reklama]]
