*Empty MediaWiki Message*

--- a/Merw.mw
+++ b/Merw.mw
@@ -22,7 +22,7 @@ Merw şäheri seljuklar döwründe Soltan Sanjaryñ paýtagty bolýar. Emma oguz
 
 *[[Sahaba guburhanalary]]
 *[[Gadymy Merwiň galalary]]
-*[[Soltan Sanjar mowzeleyi]]
+*[[Soltan Sanjar mowzeleýi]]
 *[[Täze Merwiň galalary]]
 
 [[ar:مرو (مدينة)]]
