*Empty MediaWiki Message*

--- a/Russiýa.mw
+++ b/Russiýa.mw
@@ -22,7 +22,7 @@
 | [[Rusça|Rusça dili]]
 |-
 | '''[[Gimn]]'''
-| [[Russiýa Gimni]]
+| [[Russiýa Federasiýasynyň döwlet gimni]]
 |-
 | '''[[Yüzölçümü]]'''
 | 17,075,200 km&sup2;
