*Empty MediaWiki Message*

--- a/Gazet.mw
+++ b/Gazet.mw
@@ -3,7 +3,7 @@ Gündelik yada Hepdelik habarlary çap edyan serişde.
 * [[Neýtralnyý Turkmenistan]]
 * [[Watan]]
 * [[Zaman]]
-* [[Beyik Turkmenbaşynyn Nesli]]
+* [[Nesil]]
 * [[Galkynyş]]
 * [[Mugallymlar gazeti]]
 * [[Esger]]
