--- a/Aşpezlik.mw
+++ b/Aşpezlik.mw
@@ -2,7 +2,7 @@
 [[Image:Sautee onions and peppers.jpg|thumb|]]
 
 == Tagamlar ==
-- [[Türkmen Palawy]]
+- [[Türkmen palawy]]
 - [[Kebap we çişlikler]]
 - [[Tamdyrlamalar]]
 
