--- a/Türkmenistan.mw
+++ b/Türkmenistan.mw
@@ -193,7 +193,7 @@ Häzirki wagtda Türkmenistanda 16 sany ýokary okuw jaylary bar we olarda 250 d
 
 *[[Garagum]]
 *[[Hazar deňzi]]
-*[[Türkmen Palawy]]
+*[[Türkmen palawy]]
 *[[Türkmen milli oýunlary]]
 *[[Türkmenistanyň telefon kodlary]]
 *[[Türkmenlerde wagt aňladylyşy]]
