*Empty MediaWiki Message*

--- a/Gazet.mw
+++ b/Gazet.mw
@@ -9,7 +9,7 @@ Gündelik yada Hepdelik habarlary çap edyan serişde.
 * [[Esger]]
 * [[Adalat]] 
 * [[Türkmeniň ýüpek ýoly]]
-* [[Edebiyat we Sungat]]
+* [[Edebiýat we Sungat]]
 * [[Turkmen Sporty]]
 * [[Biznes Reklama]]
 * [[Şalom]]
