*Empty MediaWiki Message*

--- a/Gazet.mw
+++ b/Gazet.mw
@@ -10,7 +10,7 @@ Gündelik yada Hepdelik habarlary çap edyan serişde.
 * [[Adalat]] 
 * [[Türkmeniň ýüpek ýoly]]
 * [[Edebiýat we Sungat]]
-* [[Turkmen Sporty]]
+* [[Türkmen sporty]]
 * [[Biznes Reklama]]
 * [[Şalom]]
 
