*Empty MediaWiki Message*

--- a/Etraplar.mw
+++ b/Etraplar.mw
@@ -45,7 +45,7 @@
 <li>GOWURDAK
 <li>Nyýazow
 <li>GAZOJAK
-<li>[[Çarşangy]]
+<li>[[Çarşaňňy etraby|Çarşaňňy]]
 <li>Halaç
 <li>[[Hojambaz]]
 <li>Garabekewul
