--- a/Aşgabat.mw
+++ b/Aşgabat.mw
@@ -34,7 +34,8 @@ Hojalygyn ýoriteleshdirilen ugurlary-uzumjilik, miwejilik, kartoşka, gok we ba
 * [http://www.duralga.com/ashgabat Aşgabadyň suratlary]
 * [http://ashgabat.us Ashgabat suratlary]
 * [http://mekdep.com Ashgabatdaky mekdepler]
-{{Template:Türkmenistanyň Welaýatları}}
+
+{{Şablon:Türkmenistanyň welaýatlary}}
 
 
 [[Category:Türkmenistan]]
