--- a/Ahal_welaýaty.mw
+++ b/Ahal_welaýaty.mw
@@ -21,7 +21,7 @@ Gaznadan altyn çaylan gündogar tipli söweşjeň altyn paltajyk, ikiýüzli gy
 == Seret ==
 * [[Ahal welaýatyndaky taryhy ýadygärlikler]]
 [[Category:Ahal]]
-{{Template:Türkmenistanyň Welaýatları}}
+{{Şablon:Türkmenistanyň welaýatlary}}
 
 [[az:Ahal vilayəti]]
 [[bg:Ахал (провинция)]]
