*Empty MediaWiki Message*

--- a/Daşoguz_welaýaty.mw
+++ b/Daşoguz_welaýaty.mw
@@ -1,6 +1,6 @@
 '''Daşoguz welaýaty'''
 * [[Daşoguz]]
-{{Template:Türkmenistanyň Welaýatları}}
+{{Şablon:Türkmenistanyň welaýatlary}}
 [[Category:Daşoguz welaýaty]]
 
 [[az:Daşoguz vilayəti]]
