--- a/Mary.mw
+++ b/Mary.mw
@@ -93,7 +93,7 @@ e) Isgender gala hem-de kiçi Soltan gala
 i) Şaýym gala
 
 Araplar döwrüne degişli ýadygärlikleriň biridir. Käbir alymlar ony Abu Muslimiň harby lageriniň galyndylary hasaplaýarlar. Şaýym gala Gäwürgalanyň 1,5 km. günorat-gündogarynda ýerleşýär. Onuň 1,28 kw.km. meýdany bolup, gala diwarlary pagsadan hem-de25×25, 5×5, 24-25×25 ölçegdäki çig kerpiçler, aram-aram hem 26,5 ×?×5 sm. ölçegde bolan kerpiçler ulanylyp salypdyr.
-{{Template:Türkmenistanyň Welaýatları}}
+{{Şablon:Türkmenistanyň welaýatlary}}
 [[Category:Mary]]
 [[Category:Türkmenistan]]
 
