*Empty MediaWiki Message*

--- a/Mary_welaýaty.mw
+++ b/Mary_welaýaty.mw
@@ -1,7 +1,7 @@
 [[Image:TurkmenistanMaryM.png|right|Map showing district]]
 '''Mary welaýaty'''
 * [[Mary]]
-{{Template:Türkmenistanyň Welaýatları}}
+{{Şablon:Türkmenistanyň welaýatlary}}
 [[Category:Mary welaýaty]]
 
 [[az:Mary vilayəti]]
