*Empty MediaWiki Message*

--- a/Lebap_welaýaty.mw
+++ b/Lebap_welaýaty.mw
@@ -1,6 +1,6 @@
 '''Lebap welaýaty'''
 * [[Türkmenabat]]
-{{Template:Türkmenistanyň Welaýatları}}
+{{Şablon:Türkmenistanyň welaýatlary}}
 [[Category:Lebap welaýaty]]
 
 [[az:Lebap vilayəti]]
