--- a/Türkmenistan.mw
+++ b/Türkmenistan.mw
@@ -130,7 +130,7 @@ Türkmenistanyň ilat sanynyň kopelişiniň tablisasy
 [http://tk.wikipedia.org/wiki/Image:Turkmenistanyn_ilat_sanynyn_kopelishi.JPG şu ýerde]
 
 == Administratiw Gurluşy ==
-[[File:TurkmenistanNumbered.png|thumb|250px|right|Türkmenistanyň welaýatlar]]
+[[File:TurkmenistanNumbered.png|thumb|250px|right|Türkmenistanyň welaýatlary]]
 Türkmenistan bäş welaýat we aýratyn paýtagt şäherden ybaratdyr.
 
 {| class="wikitable"
@@ -141,7 +141,7 @@ Türkmenistan bäş welaýat we aýratyn paýtagt şäherden ybaratdyr.
 | || [[Aşgabat]] ||  || 604,000 || 
 |-
 ! [[Ahal welaýaty]]
-| TM-A || [[Änew]] || 95,000  || 722,800 || 1
+| TM-A || [[Änew (şäherçe)]] || 95,000  || 722,800 || 1
 |-
 ! [[Balkan welaýaty]]
 | TM-B || [[Balkanabat]]　|| 138,000  || 424,700 || 2
