/* ÄNEW METJIDINIŇ ANSAMBLY */

--- a/Ahal_welaýatyndaky_taryhy_ýadygärlikler.mw
+++ b/Ahal_welaýatyndaky_taryhy_ýadygärlikler.mw
@@ -25,7 +25,7 @@ Halk arasynda Seýit Jemaleddiniň metjidi ady bilen belli bolan bu ymaratyň ga
 
 Ansambly dört desga - metjit, onuň öňündäki gabyrüsti we beýik gümmezli zaly bolan iki sany jaý emele getiripdir. Bu çylşyrymly desga metjidiň, guburhananyň, medresäniň we hanakanyň wezipelerini ýerine ýetiripdir.
 
-[[Änew]]däki metjidi öwrenmegiň başlangyjyny 1886-njy ýylda W.A. Žukowskiý başlapdyr.1904-nji ýylda harabaçylygy R. Pompelliniň amerikan ekspedisiýasy gazypdyr. Sonky ýyly A.A. Semýonow metjidiň gysgaça beýanyny hen-de ony öwrenmäge çakylygy çap etdiripdir. 1920-nji ýyllarda A.A. Karelin we W.R. Tripolskiý deformasiýanyň we weýranlanmagyň sebäplerini barladylar, inžener S.S. Sklaýarowskiý bolsa çyzgysyny ýerine ýetirdi. Ýadygärligi konserwasiýa etmek işlerini dürli wagtlarda W.R. Tripolskiý we N.M. Baçinskiý amala aşyrdy. 1947-nji ýylda M.Ý. Massonyň ýolbaşçylygy astynda Günorta Türkmenistan arheologik kompleksleýin ekspedisiýasy ansambly çuň we hemmetaraplaýyn öwrenmek işini geçirdi. Şonuň netijesinde-deençeme makalalar we G.A. Pugaçenkowanyň giňişleýin monografiýasy (1959 ý.) peýada boldy.
+[[Änew (şäherçe)|Änew]]däki metjidi öwrenmegiň başlangyjyny 1886-njy ýylda W.A. Žukowskiý başlapdyr.1904-nji ýylda harabaçylygy R. Pompelliniň amerikan ekspedisiýasy gazypdyr. Sonky ýyly A.A. Semýonow metjidiň gysgaça beýanyny hen-de ony öwrenmäge çakylygy çap etdiripdir. 1920-nji ýyllarda A.A. Karelin we W.R. Tripolskiý deformasiýanyň we weýranlanmagyň sebäplerini barladylar, inžener S.S. Sklaýarowskiý bolsa çyzgysyny ýerine ýetirdi. Ýadygärligi konserwasiýa etmek işlerini dürli wagtlarda W.R. Tripolskiý we N.M. Baçinskiý amala aşyrdy. 1947-nji ýylda M.Ý. Massonyň ýolbaşçylygy astynda Günorta Türkmenistan arheologik kompleksleýin ekspedisiýasy ansambly çuň we hemmetaraplaýyn öwrenmek işini geçirdi. Şonuň netijesinde-deençeme makalalar we G.A. Pugaçenkowanyň giňişleýin monografiýasy (1959 ý.) peýada boldy.
 
 Metjidiň portalynyň ýokarsynda Horasanyň hökümdary soltan Abul Kasym Babyryň (1446-1457ý.) ady getirilipdir. Ondaky ýazgyda şeýle diýilýär:”Bu gurluşyk beýik soltan, öz halklarynyň eýeleri, ýurtlaryň we asyrlaryň penakäri Abul-Kasym-Bayr Bahadur han patyşalyk süren wagtynda boldy, hemmeden Beýigiň özi onuň häkimiýetini we onuň paryşalygyny ebedileşdirsin”.
 
