--- a/Türkmenistan.mw
+++ b/Türkmenistan.mw
@@ -141,7 +141,7 @@ Türkmenistan bäş welaýat we aýratyn paýtagt şäherden ybaratdyr.
 | || [[Aşgabat]] ||  || 604,000 || 
 |-
 ! [[Ahal welaýaty]]
-| TM-A || [[Änew (şäherçe)]] || 95,000  || 722,800 || 1
+| TM-A || [[Änew (şäherçe)|Änew]] || 95,000  || 722,800 || 1
 |-
 ! [[Balkan welaýaty]]
 | TM-B || [[Balkanabat]]　|| 138,000  || 424,700 || 2
