--- a/Gökdepe_urşy.mw
+++ b/Gökdepe_urşy.mw
@@ -5,6 +5,16 @@ Orus imperiýasy [[1879]]-nji ýyldaky Türkmen Teke taýpasyndan ýeñilgini ut
 
 Not. Skobelev bir hatynda, "Tekeler ýer kartasynda bir gara nokat, we o gara nokat pozylmaly" diýen sözleri barmyş. Generalyñ türkleri yigrenedigini, şo sebäpden hem Gökdepede müñlerçe günasyz ynsanyñ öldürilendigini hem aýdýarlar.
 
+[[Image:Gokdepedaki metjid.jpg|right|300px|Gokdepedaki Saparmyrat Nyyazow Hajy metjidi]]
+1881-nji ýylyň 12-nji Turkmenbasyda ir bilen 11 sagat 20 minutda 1 tonna 120 kilogram därini galanyň gündogar böleginde partladyp, oňa girmäge mümkinçilik gazanan rus goşunlary eýýäm 12 sagat 30 minutda galanyň içinde aljyraňňylyga düşen adamlary uçdantutma gyryp ýördüler. Duşmanyň 1 million 140 müň oky bardy. Ol oklar galanyň içine ýygnanan 45 müň çemesi türkmene garşy atylmalydy. Elinde sowuk ýaragdan başga idili söweş esbaby bolmadyk her türkmene 25 okdan ýetýär. 23 günläp gabalan galanyň içine 872 müňden gowrak tüpeň oky we 120 müňden gowrak top oky atylypdyr… Şahyr Gurbannazar Eziziowyň sözleri bilen aýtsak bir başa bir ölüm ýeterlikkä, bir başa 25 ölüm artygrak dälmi?
+
+Ýöne gala ýygnananlar Watan üçin bir gezek däl, 25 gezek ölmelem bolsa taýýardylar. Olar muňa boýun alykdylar. Olarda esasy maksat Watan üçin jan bermek, şehit bolmakdy. Olar Watan üçin, ar-namys üçin gara başy gurban etmegiň diňe sözde däl-de, durmuşda nähili bolýandygyny görkezipdiler. Bu bize ata-babalarymyzdan galan iň uly baýlygyň, iň gymmatly mirasyň biridir. Olar bize Watany söýmegiň asyl nusgasyny goýup gitdiler.
+
+Serdarymyz Permany bilen şol gerçeklere “Türkmenistanyň gahrymanlary” diýen belent at berildi. Her ýyl Watan üçin wepat bolanlaryň hatyra gününi uly il bolup döwlet derejesinde bellemegi karar etdi. Bu hatyra gününiň her ýylyň ilkinji aýynda bellenilmegi hem ýöne ýere däl bolsa gerek. Türkmeniň her ýyly Watansöýüjilik ruhy bilen hatyra saklamakdan, geçenleri ýatlamakdan başlanýar.
+
+Gökdepe galasynyň synan gününiň “Hatyra güni” diýlip yglan edilmeginiň ýene-de bir uly manysy bar. Ol hem ýeňişden ýeňilişiň ýakyndygy görnüp durka ata-babalarymyzyň Watan üçin ölmeli diýip gelen kararlaryny biziň günlerimizde dogry diýip tassyklamakdyr. Gökdepe galasynda dökülen ganyň manysyz däldigini, şol uruşda wepat bolanlaryň hakyky Watan gahrymanlarydygyny jedelsiz hakykat edip goýmakdyr. Ondan öňem, soňam Watan üçin gara başyny goýanlary Gökdepe galasynda şehit bolanlar bilen bir hatarda hatyralamakdyr. Gökdepe türkmeniň Käbesidir. Watan üçin türkmeniň bir okuň däl, ýigrimi bäş okuň öňünde durmalam bolsa durup bilýändiginiň subutnamasydyr. Bu gahrymançylyk bizi parahatçylykly günlerde-de Watanyň gymmatynyň, hatda öz janymyzdanam ýigrimi bäş esse gymmatlydygyny ýatladyp durmalydyr. Watanyň abraýy üçin edýän her bir işimizde, okuwymyzda biziň yhlasymyzyň, görkezmeli gaýratymyzyň näçe derejede bolmalydygyny biz ata-babalarymyzyň ýigrimi bäş okuň öňünde durmaga döz gelip bilişlerini ölçeg edinip kesgitlemelidiris. Biz hem edil ata-babalarymyz ýaly hatyrasy tutulmaga mynasyp adamlar bolup ýaşamalydyrys. Biz parahatçylykly, asuda günlerde Watana şan-şöhrat getiren zähmet gahrymanlary bolmalydyrys.
+
+
 [[en:Geok Tepe]]
 [[fa:گوگ دفه]]
 [[fi:Geok-Tepe]]
