*Empty MediaWiki Message*

--- a/Gyrgyzystan.mw
+++ b/Gyrgyzystan.mw
@@ -24,7 +24,7 @@ Gyrgyz Respublikasy
 | [[Gyrgyz]]
 |-
 | '''[[Gimn]]'''
-| [[Gyrgyzystan gimni]]
+| [[Gyrgyzystan respublikasynyň döwlet gimni]]
 |-
 | '''[[Meýdany]]'''
 | 199.900 km²
