*Empty MediaWiki Message*

--- a/Ebu_Seýit_Mäneli.mw
+++ b/Ebu_Seýit_Mäneli.mw
@@ -1,4 +1,4 @@
-'''ABU SEÝIT ibn Abulhaýr Mahneýi''' ([[7 dekabr]], [[967]] - [[12 ýanwar]] , [[1049]]) - mäneli meşhur şyh, sufizm filologiýasynyň Horasandaky iň uly wekilleriniň biri. Abu Seýit il arasynda hemme taraplaýyn uly abraýly biri bolupdyr. Beýik alym Abu Aly ibn Sinada onuň bilen duşuşmak üçin Mänä gelipdir. Ibn Sina ol hakda: "Meniň ylmyň üsti bilen öwrenen zatlaryma şyh Abu Seýit pähim bilen ýetdi" diýipdir. Ol Horasanda rubagy formasyny dörediji hökmünde tanalýar. Abu Seýit ölende seljuk hökümdarlary onuň mazarynyň üstünde mawzoleý bina etdiripdirler. Onuň harabasy Mänede häzir hem bar. Serediň: [[Abu Seýidiň Mawzoleýi]]
+'''ABU SEÝIT ibn Abulhaýr Mahneýi''' ([[7 dekabr]], [[967]] - [[12 ýanwar]] , [[1049]]) - mäneli meşhur şyh, sufizm filologiýasynyň Horasandaky iň uly wekilleriniň biri. Abu Seýit il arasynda hemme taraplaýyn uly abraýly biri bolupdyr. Beýik alym Abu Aly ibn Sinada onuň bilen duşuşmak üçin Mänä gelipdir. Ibn Sina ol hakda: "Meniň ylmyň üsti bilen öwrenen zatlaryma şyh Abu Seýit pähim bilen ýetdi" diýipdir. Ol Horasanda rubagy formasyny dörediji hökmünde tanalýar. Abu Seýit ölende seljuk hökümdarlary onuň mazarynyň üstünde mawzoleý bina etdiripdirler. Onuň harabasy Mänede häzir hem bar. Serediň: [[Ebu Seýidiň mawzoleýi]]
 [[Category:Şahsyýetler]]
 
 [[de:Abu Sa'id-i Abu'l Khair]]
